# NewsAnalysis

./: README.md  pyproject.toml
backend/src/analysis_chain/: chain.py
backend/src/news_finder/: finder.py
backend/src/sentiment_analysis/: analysis.py
frontend/: app.py  utils.py
